wordpress/themes/nbeat.3/src/sass/modules/_quiz.scss
#bd-quiz {
    width: 100vw;
    height: 100vh;
    background-color: $brand-primary;
    color: #fff;
    position: fixed;
    z-index: 100;
    top: 0;
    box-sizing: border-box;
    
    form#quiz-container {
        @include nb_flex();
        @include nb_flex_wrap(nowrap);
        @include nb_flex_direction();
        position: relative;
        left: 0;
        transition: left 0.5s ease-in-out;
    }
    
    .btn-quiz {
        @include button-variant(#fff, transparent, #fff);
        font-size: $font-size-base;
        text-transform: uppercase;
        border-radius: 0;

        &:hover {
            background-color: #fff;
            color: map-get($_colors, "blue");
        }

        .icon {
            position: relative;
            top: -0.1rem;
        }
    }

    .btn-quiz-link {
        @include button-variant(#fff, transparent, transparent);
        font-size: $font-size-sm;
        border-radius: 0;
        cursor: pointer;
        cursor: hand;
        text-decoration: none;

        @include media-breakpoint-up(md) {
            font-size: $font-size-base;
        }
        
        &:hover {
            background-color: transparent;
            text-decoration: none;
        }
    }

    .btn-quiz-back {
        position: relative;
        left: -1.25rem;
    }
    
    .page {
        @include nb_flex-shrink(0);
        border: 10gpx dotted #fff;
        width: 100%;
        height: 100vh;
        min-height: 100vh;
        max-height: 100vh;
        position: relative;
        overflow: hidden;
        // padding-top: 60px;

        &.is-active {
            left: 0;
            
            /* &:before { */
            /*     position: absolute; */
            /*     content: attr(data-debug); */
            /*     text-transform: uppercase; */
            /*     top: 50px; */
            /*     right: 0; */
            /*     font-size: 0.7rem; */
            /*     padding: 0.3rem 0.7rem;; */
            /*     background-color: darken(map-get($_colors, "blue"), 10%); */
            /* } */

            .page-button-bar {
                position: fixed;
            }
        }

        .page-button-bar {
            position: absolute;
            left: 0;
            right: 0;
            bottom: 0;
            padding: 7vmin;
            background-color: map-get($_colors, "blue");
            z-index: 300;

            @include nb_flex();
            @include nb_flex_wrap(nowrap);
            @include nb_flex-align-items();
            @include nb_flex-justifycontent();

            &.center {
                @include nb_flex-justifycontent(center);
            }
        }
    }

    .page-score {
        @include nb_flex();
        @include nb_flex-align-items();
        @include nb_flex-justifycontent(center);
        @include nb_flex-direction(column);

        img {
            height: 90vmin;
            z-index: 200;
            animation-name: spin, spin-out;
            animation-duration: 6s, 2.5s;
            animation-iteration-count: infinite, 1;
            animation-timing-function: linear, cubic-bezier(0.9, 0.1, 0.9, 0.1);
        }

        .result {
            position: absolute;
            top: 0;
            left: 0;
            width: 100vw;
            height: 100vh;
            @include nb_flex();
            @include nb_flex-align-items();
            @include nb_flex-justifycontent(center);
            @include nb_flex-direction(column);
            z-index: 400;

            .score {
                animation-name: score-size;
                animation-duration: 2.5s;
                animation-iteration-count: 1;
                animation-timing-function: cubic-bezier(0.9, 0.1, 0.9, 0.1);
                animation-fill-mode: forwards;
            }

            .total {
                text-align: center;
                animation-name: total-size;
                animation-duration: 5s;
                animation-iteration-count: 1;
                animation-timing-function: cubic-bezier(0.9, 0.1, 0.9, 0.1);
                animation-fill-mode: forwards;
                font-size: 2vmin;
                
                div {
                    margin-top: 2rem;
                }
            }
        }
    }

    .page-logo {
        @include nb_flex();
        @include nb_flex-align-items();
        @include nb_flex-justifycontent(center);
        @include nb_flex-direction(column);

        img {
            height: 50vmin;
            z-index: 200;
            animation: spin 3s infinite cubic-bezier(.95,.41,.27,.76);
            margin-bottom: 20vmin;
            /* -webkit-animation: spin 3s infinite linear; */
            /* -moz-animation: spin 3s infinite linear; */
            /* -o-animation: spin 3s infinite linear; */
            /* -ms-animation: spin 3s infinite linear; */
        }
    }

    .page-question {
        padding: 7vmin;
        
        h2 {
            margin-bottom: 7vmin;
        }
        
        fieldset {
            @include nb_flex();
            @include nb_flex-align-items();
            @include nb_flex-justifycontent(center);
            @include nb_flex-direction(column);
            
            input[type="radio"] {
                display: none;
                
                + label {
                    border: 1px solid #fff;
                    padding: 0.75rem;
                    
                    @include media-breakpoint-up(md) {
                        padding: 1.5rem;
                    }

                    &:hover {
                        background-color: #fff;
                        color: map-get($_colors, "blue");
                        cursor: pointer;
                        cursor: hand;
                    }
                }
                
                &:checked {
                    + label {
                        background-color: #fff;
                        color: map-get($_colors, "blue");
                    }
                }
            }
        }
    }

    .page-form {
        padding: 7vmin;
        
        h2 {
            margin-bottom: 7vmin;
        }

        .text {
            margin-bottom: 7vmin;
            font-size: $font-size-sm;

            @include media-breakpoint-up(md) {
                font-size: $font-size-base;
            }
        }

        .line {
            @include nb_flex();
            @include nb_flex-align-items(flex-end);
            @include nb_flex-justifycontent(flex-start);
            @include nb_flex-direction(row);
            margin-bottom: 2rem;

            label {
                width: 20%;
                display: block;
                margin-bottom: 0;
            }

            input {
                width: 75%;
                background: transparent;
                border: 0;
                border-bottom: 2px dotted #fff;
                padding: 0;
                border-radius: 0;
                color: #fff;
            }
        }
    }
}

@include keyframes(spin) {
    0% { transform: rotate(360deg);}
    100% { transform: rotate(0deg);}
}

@include keyframes(spin-out) {
    0% { height: 0; }
    100% { height: 90vmin; }
}

@include keyframes(score-size) {
    0% { font-size: 0; opacity: 0}
    100% { font-size: 20vmin; opacity: 1;}
}

@include keyframes(total-size) {
    0% { opacity: 0}
    100% { opacity: 1;}
}

